--- a/pizzajoint/src/index.css
+++ b/pizzajoint/src/index.css
@@ -1,18 +1,12 @@
 /* fonts */
-@font-face {
-  font-family: 'Quicksand';
-  src: url('/Quicksand-Light.woff2') format('woff2'),
-      url('/Quicksand-Light.woff') format('woff');
-  font-weight: 300;
-  font-style: normal;
-}
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
 
 /* reset & common styles */
 body, ul, h1, h2, h3, p, button, a, div{
   margin: 0;
   padding: 0;
   color: white;
-  font-family: 'Quicksand';
+  font-family: 'Quicksand', sans-serif;
   letter-spacing: 2px;
   list-style-type: none;
   text-decoration: none;
@@ -89,7 +83,7 @@ li span.active::before{
   font-size: 2em;
   margin-bottom: 30px;
 }
-.home.container, 
+.home.container,
 .order.container{
   text-align: center;
   max-width: 800px;
@@ -103,4 +97,44 @@ li span.active::before{
 }
 .order p{
   margin: 20px auto;
+}
+
+.backdrop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(2px);
+  background-color: rgba(0,0,0,0.5);
+  z-index: 1;
+}
+
+.modal{
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 40px 20px;
+  background-color: white;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.modal button{
+  color: #444;
+  border-color: #444;
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+.modal p{
+  color: #444;
+  font-weight: bold;
+}
+
+.loader{
+  width: 10px;
+  height: 10px;
+  margin: 40px auto;
+  border-radius: 50%;
+  background: #fff;
 }
